Dev: imported images, fixed some bugs and misnamings, made dark mode/light mode button work

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header {
 	display: grid;
 	justify-content: center;
 	justify-content: center;
-	background-image: url('public/landscape.jpg');
+	background-image: url('../public/landscape.jpg');
 	background-size: cover;
 	background-position: center;
 }
